# AIew

./: .gitignore  CHANGELOG.md  docker-compose.production.yml  eslint.config.js  package.json  pnpm-lock.yaml  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml  ci.yml  release-please.yml  tokens-to-css.yml
.husky/: pre-commit
apps/ai-server/: .env.example  pyproject.toml  requirements.txt
apps/ai-server/.husky/: pre-commit
apps/ai-server/app/: main.py  vi.py
apps/ai-server/app/api/v1/endpoints/: emotion.py  evaluation.py  followup.py  memory_debug.py  pdf.py  question.py  session_log.py
apps/ai-server/app/config/prompt/: evaluation_prompt.txt  followup_prompt.txt  question_prompt.txt  session_evaluation_prompt.txt
apps/ai-server/app/core/: memory.py
apps/ai-server/app/models/: emotion.py  evaluation.py  event_types.py  face_expression.py  followup.py  memory.py  pdf.py  question.py
apps/ai-server/app/services/: __init__.py  answer_evaluator.py  emotion_analyst.py  face_evaluation_service.py  followup_generator.py  llm_utils.py  memory_logger.py  ocr_parser.py  pdf_parser.py  pdf_processor.py  preprocessor.py  question_generator.py
apps/ai-server/app/utils/: extract_evaluation.py  file_check.py  langfuse_handler.py  llm_utils.py  pdf_utils.py  video_analysis.py
docs/: SSH_SECURITY.md  SSL_AUTO_RENEWAL.md
infra/: docker-compose.local.yml  docker-compose.production.yml
nginx/: nginx.prod.conf  renew-cert.sh
scripts/: dev.sh  release.sh  setup-fail2ban.sh  setup-ssh-security.sh  start.sh
(+332 files in other folders)
